--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
-<app-user-item></app-user-item>
+<!-- Menu Bar -->
+<div class="ui menu">
+    <div class="ui container">
+        <a href="#" class="header item">
+            <img class="logo" src="assets/images/ng-book-2-minibook.png" />
+            ng-book 2
+        </a>
+        <div class="header item borderless">
+            <h1 class="ui header">
+                Angular Forms
+            </h1>
+        </div>
+    </div>
+</div>
+<!-- <app-demo-sku-form></app-demo-sku-form> -->
+<!-- <app-demo-sku-form-builder></app-demo-sku-form-builder> -->
+<!-- <app-demo-sku-form-builder-with-custom-validator></app-demo-sku-form-builder-with-custom-validator> -->
+<!-- <app-manual-injector></app-manual-injector> -->
+<!-- <app-analytic-demo></app-analytic-demo> -->
+<app-simple-http></app-simple-http>
