you tube search

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,5 @@
 <!-- <app-demo-sku-form-builder-with-custom-validator></app-demo-sku-form-builder-with-custom-validator> -->
 <!-- <app-manual-injector></app-manual-injector> -->
 <!-- <app-analytic-demo></app-analytic-demo> -->
-<app-simple-http></app-simple-http>
+<!-- <app-simple-http></app-simple-http> -->
+<app-search-search></app-search-search>
