--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,5 @@
 <!-- <app-manual-injector></app-manual-injector> -->
 <!-- <app-analytic-demo></app-analytic-demo> -->
 <!-- <app-simple-http></app-simple-http> -->
-<app-search-search></app-search-search>
+<!-- <app-search-search></app-search-search> -->
+<router-outlet></router-outlet>
