--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,10 @@
 <!-- <app-analytic-demo></app-analytic-demo> -->
 <!-- <app-simple-http></app-simple-http> -->
 <!-- <app-search-search></app-search-search> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+
+
+<app-inline-style></app-inline-style>
+<!-- <app-external-style></app-external-style> -->
+<app-native-encapsulation></app-native-encapsulation>
+<app-no-encapsulation></app-no-encapsulation>
