--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,10 @@
 <!-- <router-outlet></router-outlet> -->
 
 
-<app-inline-style></app-inline-style>
-<!-- <app-external-style></app-external-style> -->
+<!-- <app-inline-style></app-inline-style>
+<app-external-style></app-external-style>
 <app-native-encapsulation></app-native-encapsulation>
-<app-no-encapsulation></app-no-encapsulation>
+<app-no-encapsulation></app-no-encapsulation> -->
+
+
+<app-content-projection-demo></app-content-projection-demo>
