ng book if custom id

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="ui menu">
     <div class="ui container">
         <a href="#" class="header item">
-            <img class="logo" src="assets/images/ng-book-2-minibook.png" />
+            <img class="logo" src="../assets/images/logos/ng-book-2-minibook.png" />
             ng-book 2
         </a>
         <div class="header item borderless">
@@ -28,5 +28,12 @@
 <app-no-encapsulation></app-no-encapsulation> -->
 
 
-<app-content-projection-demo></app-content-projection-demo>
-<app-content-tabs></app-content-tabs>
+<!-- <app-content-projection-demo></app-content-projection-demo>
+<app-content-tabs></app-content-tabs> -->
+<!-- <app-on-init-demo></app-on-init-demo> -->
+<!-- <app-on-changes-demo></app-on-changes-demo> -->
+<!-- <app-differ-demo></app-differ-demo> -->
+<!-- <app-all-hooks-demo></app-all-hooks-demo> -->
+
+
+<app-ng-book-if></app-ng-book-if>
