removes all specs: starting

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 <!-- <app-analytic-demo></app-analytic-demo> -->
 <!-- <app-simple-http></app-simple-http> -->
 <!-- <app-search-search></app-search-search> -->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 
 
 <!-- <app-inline-style></app-inline-style>
@@ -36,5 +36,5 @@
 <!-- <app-all-hooks-demo></app-all-hooks-demo> -->
 
 
-<app-ng-book-if></app-ng-book-if>
-<app-ng-book-for-demo></app-ng-book-for-demo>
+<!-- <app-ng-book-if></app-ng-book-if>
+<app-ng-book-for-demo></app-ng-book-for-demo> -->
