--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,13 @@
         </a>
         <div class="header item borderless">
             <h1 class="ui header">
-                Angular Forms
+                <!-- Angular Forms -->
             </h1>
         </div>
     </div>
 </div>
+
+<async-pipe-message></async-pipe-message>
 <!-- <app-demo-sku-form></app-demo-sku-form> -->
 <!-- <app-demo-sku-form-builder></app-demo-sku-form-builder> -->
 <!-- <app-demo-sku-form-builder-with-custom-validator></app-demo-sku-form-builder-with-custom-validator> -->
@@ -19,7 +21,7 @@
 <!-- <app-analytic-demo></app-analytic-demo> -->
 <!-- <app-simple-http></app-simple-http> -->
 <!-- <app-search-search></app-search-search> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 
 
 <!-- <app-inline-style></app-inline-style>
@@ -28,12 +30,12 @@
 <app-no-encapsulation></app-no-encapsulation> -->
 
 
-<!-- <app-content-projection-demo></app-content-projection-demo>
-<app-content-tabs></app-content-tabs> -->
+<!-- <app-content-projection-demo></app-content-projection-demo> -->
+<!-- <app-content-tabs></app-content-tabs> -->
 <!-- <app-on-init-demo></app-on-init-demo> -->
 <!-- <app-on-changes-demo></app-on-changes-demo> -->
-<!-- <app-differ-demo></app-differ-demo> -->
-<!-- <app-all-hooks-demo></app-all-hooks-demo> -->
+<!-- <app-differ-demo></app-differ-demo>
+<app-all-hooks-demo></app-all-hooks-demo> -->
 
 
 <!-- <app-ng-book-if></app-ng-book-if>
